# hype

./: Cargo.toml
hype-media/: Cargo.toml
hype-media/src/: arguments.rs  main.rs
hype-shot/: Cargo.toml
hype-shot/src/: arguments.rs  main.rs
hype-wallpaper/: Cargo.toml
hype-wallpaper/src/: arguments.rs  collection.rs  config_file.rs  hyprpaper.rs  main.rs
hype-zoom/: Cargo.toml
hype-zoom/src/: args.rs  main.rs
lib_hype/: Cargo.toml
lib_hype/src/: core.rs  grim.rs  lib.rs  slurp.rs
lib_hype/src/core/: dirs.rs  notification.rs  rectangle.rs  screenshot.rs
lib_hype/src/core/screenshot/: grim.rs  mod.rs  screenshoter.rs  selection.rs  slurp.rs
lib_hype/src/core/wallpaper/: hyprpaper.rs  mod.rs  swww.rs
lib_hype/src/hyprland/: hyprctl.rs
lib_hype/src/hyprland/hyprctl/: clients.rs  cursorpos.rs  hyprpaper.rs  monitors.rs  zoom.rs
lib_hype/src/media/: mod.rs  wpctl.rs
lib_hype/src/theme/: core.rs  mod.rs
lib_hype/src/theme/core/: theme.rs
lib_hype/src/theme/themes/: catppuccin_frappe.rs  mod.rs  rose_pine_moon.rs  solarized_dark.rs  solarized_light.rs
lib_theme/: Cargo.toml
lib_theme/src/: core.rs
lib_theme/src/core/: color.rs  palette.rs  terminal_colors.rs  theme.rs  themeable.rs
lib_theme/src/themes/: catppuccin_frappe.rs  mod.rs  rose_pine_moon.rs  solarized_dark.rs  solarized_light.rs
theme/: Cargo.toml
theme/src/: main.rs  programs.rs  themeable.rs
theme/src/programs/: alacritty.rs  hyprland.rs  mako.rs  swaylock.rs  waybar.rs  wofi.rs
